--- a/01-html-category/index.html
+++ b/01-html-category/index.html
@@ -17,19 +17,61 @@
 <br> <!-- "br" etiketi ile alt satıra geçeriz. -->
 
 <!-- My Hobbies -->
-<h2>Sevdiğim Diziler</h2>
+<h2>İlgi alanlarım</h2>
+<ol>
+    <li>
+        <p>Film</p>
+        <ul>
+            <li>
+                <a href="https://www.imdb.com/title/tt0133093/">Matrix</a>
+            </li>
+            <li>
+                <p>Upgrade</p>
+            <li>
+                <p>Don't lookup</p>
+            </li>
+        </ul>
+    </li>
+    <li>
+        <p>Dizi</p>
+        <ul>
+            <li>
+                <p>Breaking Bad</p>
+            </li>
+            <li>
+                <p>Black Mirror</p>
+            </li>
+            <li>
+                <p>Sherlock Holmes</p>
+            </li>
 
-<h3>Black Mirror</h3>
-<p>Her bölümü birbirinden bağımsız Bilim Kurgu dizisidir</p>
-
-<h3>Breaking Bad</h3>
-<p>Breaking Bad, Vince Gilligan tarafından yaratılan ve AMC'de yayımlanan bir Amerikan suç drama dizisidir.</p>
-
+        </ul>
+    </li>
+    <li>
+        <p>Kitap</p>
+            <ul>
+                <li>
+                    <a href="https://www.goodreads.com/book/show/45890984-pia-mater?from_search=true&from_srp=true&qid=vH3qoDIdGL&rank=1">Pia Mater</a>
+                </li>
+                <li>
+                    <p>Homo Sapiens</p>
+                </li>
+                <li>
+                    <p>Homo Deus</p>
+                </li>
+            </ul>
+    </li>
+</ol>
 <br>
 
 <h2>Sevdiğim Filmler</h2>
 
-<h3>Matrix</h3>
-<p>Güzel bir yabancı, bilgisayar korsanı Neo'yu yasak bir yeraltı dünyasına götürdüğünde, şok edici gerçeği keşfeder - bildiği hayat, kötü bir siber istihbaratın ayrıntılı bir aldatmacasıdır.</p>
+<figure>
+    <h3>Matrix</h3>
+        <img src="https://cdn.evrimagaci.org/g7qJSkzbDUHlcxdv7mF-SRVrxyQ=/evrimagaci.org%2Fpublic%2Fmi_media%2Fd4c056c953f0cf00fc59b56e296bbcee.jpeg" alt="Matrix"  style="width:198px;height:268px;">
+        <figcaption> <em>Matrix </em> Filmi</figcaption>
+
+    <p>Güzel bir yabancı, bilgisayar korsanı Neo'yu yasak bir yeraltı dünyasına götürdüğünde, şok edici gerçeği keşfeder - bildiği hayat, kötü bir siber istihbaratın ayrıntılı bir aldatmacasıdır.</p>
+</figure>
 </body>
 </html>
